# segmentation

./: .gitignore  CMakeLists.txt  compile.sh
src/: Main.cpp
src/filter/: Filter.cpp  Filter.h
src/threshold/: HueThreshold.cpp  HueThreshold.h
src/utils/: ColorTypesExtensions.cpp  ColorTypesExtensions.h  ImageUtils.cpp  ImageUtils.h
src/watershed/: Watershed.cpp  Watershed.h
